--- a/sections/timeline.html
+++ b/sections/timeline.html
@@ -1,14 +1,14 @@
 <!-- Timeline Section -->
 <section id="timeline" class="py-5 bg-light">
   <div class="container">
-    <h2 class="fw-bold text-center text-primary mb-5" style="font-size:2.5rem;">
+    <h2 class="timeline-heading text-center text-primary mb-5">
       Formal & Professional
     </h2>
 
     <div class="timeline-horizontal d-flex flex-wrap justify-content-center">
-
+      
       <!-- Item 1 -->
-      <div class="timeline-card shadow-sm p-4 m-3 rounded-4 border-top border-4 border-primary">
+      <div class="timeline-card border-top border-4 border-primary">
         <h3 class="fs-5 fw-semibold text-primary mb-1">Laravel Developer</h3>
         <small class="text-muted d-block mb-2">Swipewire Technologies<br>Aug 2023 – Present</small>
         <p class="text-secondary mb-0">
@@ -17,7 +17,7 @@
       </div>
 
       <!-- Item 2 -->
-      <div class="timeline-card shadow-sm p-4 m-3 rounded-4 border-top border-4 border-purple">
+      <div class="timeline-card border-top border-4 border-purple">
         <h3 class="fs-5 fw-semibold text-purple mb-1">PHP Developer</h3>
         <small class="text-muted d-block mb-2">SocialBytes Technologies<br>Apr 2021 – Jul 2023</small>
         <p class="text-secondary mb-0">
@@ -26,7 +26,7 @@
       </div>
 
       <!-- Item 3 -->
-      <div class="timeline-card shadow-sm p-4 m-3 rounded-4 border-top border-4 border-danger">
+      <div class="timeline-card border-top border-4 border-danger">
         <h3 class="fs-5 fw-semibold text-danger mb-1">B.E. in ISE</h3>
         <small class="text-muted d-block mb-2">Sambhram Institute of Technology<br>2016 – 2020</small>
         <p class="text-secondary mb-0">
@@ -38,25 +38,4 @@
   </div>
 </section>
 
-<!-- Custom CSS -->
-<style>
-/* Horizontal scroll on small devices */
-.timeline-horizontal {
-  gap: 1rem;
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
-  padding-bottom: 1rem;
-}
-.timeline-card {
-  flex: 0 0 300px;
-  scroll-snap-align: start;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.timeline-card:hover {
-  transform: translateY(-6px);
-  box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-}
-/* Custom colors */
-.text-purple { color: #8b5cf6; }
-.border-purple { border-color: #8b5cf6 !important; }
-</style>
+
