--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Legion</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Portfolio website of Suman K S - Web Developer, showcasing skills, projects, and contact details." />
+  <title>Legion | Suman K S</title>
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
   <!-- Swiper CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<!-- Bootstrap Icons CDN -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
-  <link rel="stylesheet" href="css/style.css">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body class="bg-light text-dark">
 
@@ -25,13 +29,14 @@
     <!-- Header -->
     <header class="sticky-top bg-white bg-opacity-75 shadow-sm backdrop-blur">
       <div class="container d-flex justify-content-between align-items-center py-3">
+        
         <!-- Logo -->
-        <div class="fs-3 fw-bold text-gradient">
+        <a href="#hero" class="fs-3 fw-bold text-gradient text-decoration-none">
           Suman K S
-        </div>
+        </a>
 
         <!-- Desktop Nav -->
-        <nav class="d-none d-md-flex gap-3 fw-medium">
+        <nav class="d-none d-md-flex gap-3 fw-medium" aria-label="Main navigation">
           <a href="#hero" class="nav-link">Home</a>
           <a href="#about" class="nav-link">About</a>
           <a href="#skills" class="nav-link">Skills</a>
@@ -40,24 +45,24 @@
         </nav>
 
         <!-- Mobile Menu Button -->
-        <button class="btn d-md-none fs-3" type="button" data-bs-toggle="collapse" data-bs-target="#mobileMenu">
+        <button class="btn d-md-none fs-3" type="button" data-bs-toggle="collapse" data-bs-target="#mobileMenu" aria-controls="mobileMenu" aria-expanded="false" aria-label="Toggle navigation">
           ☰
         </button>
       </div>
 
       <!-- Mobile Nav -->
-      <div id="mobileMenu" class="collapse bg-white bg-opacity-90 px-4 pb-3">
+      <nav id="mobileMenu" class="collapse bg-white bg-opacity-90 px-4 pb-3" aria-label="Mobile navigation">
         <a href="#hero" class="d-block py-2">Home</a>
         <a href="#about" class="d-block py-2">About</a>
         <a href="#skills" class="d-block py-2">Skills</a>
         <a href="#projects" class="d-block py-2">Projects</a>
         <a href="#contact" class="d-block py-2">Contact</a>
-      </div>
+      </nav>
     </header>
 
     <!-- Main content -->
     <main id="content" class="flex-grow-1 container py-5">
-      <!-- Add your sections here -->
+      <!-- Sections go here -->
     </main>
 
     <!-- Footer -->
@@ -66,19 +71,15 @@
     </footer>
   </div>
 
-
-
-  <!-- Chatbot Container -->
-<div id="chatbotContainer"></div>
-
-    <div id="resumeContainer"></div>
-
+  <!-- Chatbot + Resume Modals -->
+  <div id="chatbotContainer"></div>
+  <div id="resumeContainer"></div>
 
   <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/resumeModal.js"></script>
-  <script src="js/chatbot.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js" defer></script>
+  <script src="js/main.js" defer></script>
+  <script src="js/resumeModal.js" defer></script>
+  <script src="js/chatbot.js" defer></script>
 </body>
 </html>
