--- a/sections/projects.html
+++ b/sections/projects.html
@@ -1,7 +1,9 @@
+<!-- Projects Section -->
 <section id="projects" class="position-relative py-5 px-3 bg-light overflow-hidden">
+
   <!-- Floating background shapes -->
-  <div class="position-absolute top-0 start-0 translate-middle bg-primary bg-opacity-25 rounded-circle blur-slow"></div>
-  <div class="position-absolute bottom-0 end-0 translate-middle bg-purple bg-opacity-25 rounded-circle blur-slow"></div>
+  <div class="position-absolute top-0 start-0 translate-middle rounded-circle blur-slow bg-primary bg-opacity-25"></div>
+  <div class="position-absolute bottom-0 end-0 translate-middle rounded-circle blur-slow bg-purple bg-opacity-25"></div>
 
   <!-- Section Heading -->
   <h2 class="display-4 fw-bold text-center text-gradient mb-5 fade-in">
@@ -9,10 +11,10 @@
   </h2>
 
   <!-- Projects Loop -->
-  <div class="projects-container overflow-hidden position-relative">
+  <div class="projects-container overflow-hidden">
     <div class="projects-loop d-flex gap-4">
-      
-      <!-- Project Card -->
+
+      <!-- Project Cards -->
       <div class="project-card card text-center shadow-lg p-4">
         <div class="fs-1 mb-3">🏥</div>
         <h3 class="h4 fw-bold text-primary">Healthcare Management</h3>
@@ -53,8 +55,9 @@
         </p>
       </div>
 
-      <!-- Duplicate Set for seamless loop -->
-          <div class="project-card card text-center shadow-lg p-4">
+      <!-- Duplicate set for seamless loop -->
+      <!-- (Cloned dynamically via CSS/JS for maintainability if needed) -->
+      <div class="project-card card text-center shadow-lg p-4">
         <div class="fs-1 mb-3">🏥</div>
         <h3 class="h4 fw-bold text-primary">Healthcare Management</h3>
         <p class="text-muted mt-3">
@@ -96,66 +99,3 @@
     </div>
   </div>
 </section>
-
-<style>
-/* Background glow shapes */
-.blur-slow {
-  width: 20rem;
-  height: 20rem;
-  filter: blur(120px);
-  animation: pulse-slow 6s infinite;
-}
-.bg-purple {
-  background-color: #a855f7;
-}
-
-/* Gradient text */
-.text-gradient {
-  background: linear-gradient(to right, #6366f1, #a855f7, #ec4899);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-/* Loop animation */
-.projects-loop {
-  width: max-content;
-  animation: slideLoop 40s linear infinite;
-}
-@keyframes slideLoop {
-  from { transform: translateX(0); }
-  to { transform: translateX(-50%); }
-}
-
-/* Project card */
-.project-card {
-  min-width: 220px;
-  max-width: 300px;
-  border-radius: 1.5rem !important;
-  backdrop-filter: blur(12px);
-  transition: transform 0.4s ease, box-shadow 0.4s ease;
-}
-.project-card:hover {
-  transform: translateY(-8px) scale(1.05);
-  box-shadow: 0 20px 35px rgba(0,0,0,0.25) !important;
-}
-
-/* Animations */
-@keyframes pulse-slow {
-  0%,100% { transform: scale(1); opacity: 0.3; }
-  50% { transform: scale(1.2); opacity: 0.5; }
-}
-.fade-in {
-  animation: fadeIn 0.8s ease forwards;
-}
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(20px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-
-/* ✅ Mobile responsive tweaks */
-@media (max-width: 768px) {
-  .project-card {
-    min-width: 70vw; /* wider cards for mobile */
-  }
-}
-</style>
