--- a/sections/skills.html
+++ b/sections/skills.html
@@ -5,179 +5,48 @@
   <div class="position-absolute bottom-0 end-0 translate-middle bg-purple opacity-25 rounded-circle blur-shape-lg"></div>
 
   <!-- Orbit Container -->
-  <div class="position-relative mx-auto d-flex align-items-center justify-content-center orbit-container">
+  <div class="orbit-container position-relative mx-auto d-flex align-items-center justify-content-center">
     
-    <!-- Section Title (center) -->
-    <h2 class="position-absolute fw-bold display-5 text-primary text-center z-3 animate-fadeIn">
+    <!-- Section Title -->
+    <h2 class="section-title position-absolute fw-bold display-5 text-primary text-center z-3">
       Tech Stack
     </h2>
 
     <!-- Orbit Wrapper -->
-    <div class="position-relative w-100 h-100 animate-orbit">
+    <div class="orbit-wrapper">
       <!-- Skill Cards -->
       <div class="skill-card" style="--i:0;">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP">
-        <p>PHP</p>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP"><p>PHP</p>
       </div>
       <div class="skill-card" style="--i:1;">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/laravel/laravel-original.svg" alt="Laravel">
-        <p>Laravel</p>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/laravel/laravel-original.svg" alt="Laravel"><p>Laravel</p>
       </div>
       <div class="skill-card" style="--i:2;">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="MySQL">
-        <p>MySQL</p>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="MySQL"><p>MySQL</p>
       </div>
       <div class="skill-card" style="--i:3;">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
-        <p>JavaScript</p>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript"><p>JavaScript</p>
       </div>
       <div class="skill-card" style="--i:4;">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React.js">
-        <p>React.js</p>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React.js"><p>React.js</p>
       </div>
       <div class="skill-card" style="--i:5;">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js">
-        <p>Node.js</p>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js"><p>Node.js</p>
       </div>
       <div class="skill-card" style="--i:6;">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" alt="Express.js">
-        <p>Express.js</p>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" alt="Express.js"><p>Express.js</p>
       </div>
       <div class="skill-card" style="--i:7;">
-        <img src="https://cdn-icons-png.flaticon.com/512/779/779549.png" alt="REST API">
-        <p>REST API</p>
+        <img src="https://cdn-icons-png.flaticon.com/512/779/779549.png" alt="REST API"><p>REST API</p>
       </div>
       <div class="skill-card" style="--i:8;">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git">
-        <p>Git</p>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git"><p>Git</p>
       </div>
       <div class="skill-card" style="--i:9;">
-        <img src="https://cdn-icons-png.flaticon.com/512/5968/5968875.png" alt="Jira">
-        <p>Jira</p>
+        <img src="https://cdn-icons-png.flaticon.com/512/5968/5968875.png" alt="Jira"><p>Jira</p>
       </div>
     </div>
   </div>
 </section>
 
-<!-- Custom CSS -->
-<style>
-/* Orbit Container Size */
-.orbit-container {
-  width: 600px;
-  height: 600px;
-  max-width: 100%;
-}
 
-/* Blur Accent Shapes */
-.blur-shape {
-  width: 200px;
-  height: 200px;
-  filter: blur(90px);
-}
-.blur-shape-lg {
-  width: 300px;
-  height: 300px;
-  filter: blur(120px);
-}
-
-/* Fade-in for Title */
-@keyframes fadeIn {
-  0% { opacity:0; transform: translateY(20px); }
-  100% { opacity:1; transform: translateY(0); }
-}
-.animate-fadeIn { animation: fadeIn 0.8s ease forwards; }
-
-/* Orbit Rotation */
-@keyframes orbit {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-.animate-orbit {
-  width: 100%;
-  height: 100%;
-  animation: orbit 25s linear infinite;
-  transform-origin: center center;
-}
-
-/* Skill Cards */
-.skill-card {
-  position: absolute;
-  width: 100px;
-  height: 100px;
-  top: 50%;
-  left: 50%;
-  margin: -50px;
-  border-radius: 50%;
-  background: rgba(255,255,255,0.2);
-  backdrop-filter: blur(12px);
-  box-shadow: 0 6px 20px rgba(0,0,0,0.15);
-  
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  
-  text-align: center;
-  transform: rotate(calc(var(--i) * 36deg)) translateX(250px) rotate(calc(-1 * var(--i) * 36deg));
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.skill-card img {
-  width: 40px;
-  height: 40px;
-  margin-bottom: 5px;
-}
-.skill-card p {
-  font-weight: 600;
-  color: #0d6efd; /* Bootstrap primary */
-  font-size: 14px;
-  margin: 0;
-}
-.skill-card:hover {
-  transform: rotate(calc(var(--i) * 36deg)) translateX(250px) rotate(calc(-1 * var(--i) * 36deg)) scale(1.15);
-  box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-}
-
-/* ------------------ Responsive ------------------ */
-@media (max-width: 992px) { /* Tablets */
-  .orbit-container {
-    width: 450px;
-    height: 450px;
-  }
-  .skill-card {
-    width: 80px;
-    height: 80px;
-    margin: -40px;
-    transform: rotate(calc(var(--i) * 36deg)) translateX(180px) rotate(calc(-1 * var(--i) * 36deg));
-  }
-  .skill-card img {
-    width: 30px;
-    height: 30px;
-  }
-  .skill-card p {
-    font-size: 12px;
-  }
-}
-
-@media (max-width: 576px) { /* Mobile */
-  .orbit-container {
-    width: 320px;
-    height: 320px;
-  }
-  .skill-card {
-    width: 60px;
-    height: 60px;
-    margin: -30px;
-    transform: rotate(calc(var(--i) * 36deg)) translateX(120px) rotate(calc(-1 * var(--i) * 36deg));
-  }
-  .skill-card img {
-    width: 24px;
-    height: 24px;
-  }
-  .skill-card p {
-    font-size: 11px;
-  }
-  h2 {
-    font-size: 1.75rem !important;
-  }
-}
-</style>
