--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </div>
 
   <!-- Chatbot + Resume Modals -->
-  <div id="chatbotContainer"></div>
+  <!-- <div id="chatbotContainer"></div> -->
   <div id="resumeContainer"></div>
 
   <!-- Scripts -->
