--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
   <!-- Swiper CSS -->
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<!-- Bootstrap Icons CDN -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css" />
@@ -26,53 +27,20 @@
 
   <div class="d-flex flex-column min-vh-100">
 
-    <!-- Header -->
-    <header class="sticky-top bg-white bg-opacity-75 shadow-sm backdrop-blur">
-      <div class="container d-flex justify-content-between align-items-center py-3">
-        
-        <!-- Logo -->
-        <a href="#hero" class="fs-3 fw-bold text-gradient text-decoration-none">
-          Suman K S
-        </a>
-
-        <!-- Desktop Nav -->
-        <nav class="d-none d-md-flex gap-3 fw-medium" aria-label="Main navigation">
-          <a href="#hero" class="nav-link">Home</a>
-          <a href="#about" class="nav-link">About</a>
-          <a href="#skills" class="nav-link">Skills</a>
-          <a href="#projects" class="nav-link">Projects</a>
-          <a href="#contact" class="nav-link">Contact</a>
-        </nav>
-
-        <!-- Mobile Menu Button -->
-        <button class="btn d-md-none fs-3" type="button" data-bs-toggle="collapse" data-bs-target="#mobileMenu" aria-controls="mobileMenu" aria-expanded="false" aria-label="Toggle navigation">
-          ☰
-        </button>
-      </div>
-
-      <!-- Mobile Nav -->
-      <nav id="mobileMenu" class="collapse bg-white bg-opacity-90 px-4 pb-3" aria-label="Mobile navigation">
-        <a href="#hero" class="d-block py-2">Home</a>
-        <a href="#about" class="d-block py-2">About</a>
-        <a href="#skills" class="d-block py-2">Skills</a>
-        <a href="#projects" class="d-block py-2">Projects</a>
-        <a href="#contact" class="d-block py-2">Contact</a>
-      </nav>
-    </header>
+    <!-- Header (loaded dynamically) -->
+    <div id="headerContainer"></div>
 
     <!-- Main content -->
     <main id="content" class="flex-grow-1 container py-5">
       <!-- Sections go here -->
     </main>
 
-    <!-- Footer -->
-    <footer class="bg-white bg-opacity-75 text-center text-muted py-3">
-      © <span id="year"></span> Suman K S · Built with ❤️ & Legion
-    </footer>
+    <!-- Footer (loaded dynamically) -->
+    <div id="footerContainer"></div>
   </div>
 
   <!-- Chatbot + Resume Modals -->
-  <!-- <div id="chatbotContainer"></div> -->
+  <div id="chatbotContainer"></div>
   <div id="resumeContainer"></div>
 
   <!-- Scripts -->
@@ -81,5 +49,6 @@
   <script src="js/main.js" defer></script>
   <script src="js/resumeModal.js" defer></script>
   <script src="js/chatbot.js" defer></script>
+  <script src="js/layout.js" defer></script> <!-- NEW -->
 </body>
 </html>
