--- a/header.html
+++ b/header.html
@@ -1,18 +1,21 @@
-<header class="sticky-top bg-white bg-opacity-75 shadow-sm backdrop-blur">
+<header class="sticky-top bg-white bg-opacity-75 backdrop-blur shadow-sm border-bottom">
   <div class="container d-flex justify-content-between align-items-center py-3">
     
     <!-- Logo -->
-    <a href="#hero" class="fs-3 fw-bold text-gradient text-decoration-none">
+    <a href="#hero" class="fs-3 fw-bold text-decoration-none text-gradient">
       Suman K S
     </a>
 
     <!-- Desktop Nav -->
-    <nav class="d-none d-md-flex gap-3 fw-medium" aria-label="Main navigation">
-      <a href="#hero" class="nav-link">Home</a>
-      <a href="#about" class="nav-link">About</a>
-      <a href="#skills" class="nav-link">Skills</a>
-      <a href="#projects" class="nav-link">Projects</a>
-      <a href="#contact" class="nav-link">Contact</a>
+    <nav class="d-none d-md-flex align-items-center gap-4 fw-medium" aria-label="Main navigation">
+      <a href="#hero" class="nav-link px-0">Home</a>
+      <a href="#about" class="nav-link px-0">About</a>
+      <a href="#skills" class="nav-link px-0">Skills</a>
+      <a href="#projects" class="nav-link px-0">Projects</a>
+      <a href="#contact" class="nav-link px-0">Contact</a>
+      <a   href="assets/resume.pdf" target="_blank" class="btn btn-gradient rounded-pill px-4 py-2 fw-semibold shadow-sm ms-2">
+        Hire Me
+      </a>
     </nav>
 
     <!-- Mobile Menu Button -->
@@ -22,11 +25,15 @@
   </div>
 
   <!-- Mobile Nav -->
-  <nav id="mobileMenu" class="collapse bg-white bg-opacity-90 px-4 pb-3" aria-label="Mobile navigation">
+  <nav id="mobileMenu" class="collapse bg-white bg-opacity-95 backdrop-blur px-4 pb-3" aria-label="Mobile navigation">
     <a href="#hero" class="d-block py-2">Home</a>
     <a href="#about" class="d-block py-2">About</a>
     <a href="#skills" class="d-block py-2">Skills</a>
     <a href="#projects" class="d-block py-2">Projects</a>
     <a href="#contact" class="d-block py-2">Contact</a>
+    <a   href="assets/resume.pdf" target="_blank" class="btn btn-gradient rounded-pill w-100 mt-3 py-2 fw-semibold shadow-sm">
+      Hire Me
+    </a>
   </nav>
 </header>
+
