--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/new.css" />
+
 </head>
 <body class="bg-light text-dark">
 
@@ -39,16 +41,13 @@
     <div id="footerContainer"></div>
   </div>
 
-  <!-- Chatbot + Resume Modals -->
-  <div id="chatbotContainer"></div>
-  <div id="resumeContainer"></div>
+
 
   <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js" defer></script>
   <script src="js/main.js" defer></script>
-  <script src="js/resumeModal.js" defer></script>
-  <script src="js/chatbot.js" defer></script>
   <script src="js/layout.js" defer></script> <!-- NEW -->
 </body>
 </html>
