--- a/sections/about.html
+++ b/sections/about.html
@@ -10,10 +10,11 @@
       
       <!-- Avatar -->
       <div class="col-md-3 text-center">
-        <div class="about-avatar bounce" aria-hidden="true">
-          👤
-        </div>
-      </div>
+  <div class="about-avatar bounce" aria-hidden="true">
+    <span class="legion-text">Legion</span>
+  </div>
+</div>
+
 
       <!-- Text Content -->
       <div class="col-md-9 text-center text-md-start">
