--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
   <!-- Custom CSS -->
-  <!-- <link rel="stylesheet" href="css/style.css" /> -->
-  <link rel="stylesheet" href="css/new.css" />
+  <!-- <link rel="stylesheet" href="css/new.css" /> -->
+   <link rel="stylesheet" href="css/newthme.css" />
 </head>
 <body class="bg-light text-dark">
 
@@ -80,7 +80,9 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js" defer></script>
-  <script src="js/main.js" defer></script>
-  <script src="js/layout.js" defer></script>
+  <!-- <script src="js/main.js" defer></script>
+  <script src="js/layout.js" defer></script> -->
+    <script src="js/newtheme.js" defer></script>
+
 </body>
 </html>
