--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <body class="bg-light text-dark">
 
   <!-- Loader -->
-  <div id="loader" class="position-fixed top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center bg-white">
+  <!-- <div id="loader" class="position-fixed top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center bg-white">
     <h1 class="display-3 fw-bold text-gradient animate-pulse">Legion</h1>
-  </div>
+  </div> -->
 
   <div class="d-flex flex-column min-vh-100">
 
@@ -73,15 +73,16 @@
       <!-- Sections go here -->
     </main>
 
-    <!-- Footer -->
-    <div id="footerContainer"></div>
+  <!-- Footer container (footer.html will be injected here) -->
+  <div id="footerContainer"></div>
+
   </div>
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js" defer></script>
-  <!-- <script src="js/main.js" defer></script>
-  <script src="js/layout.js" defer></script> -->
+  <script src="js/main.js" defer></script>
+  <!-- <script src="js/layout.js" defer></script>  -->
     <script src="js/newtheme.js" defer></script>
 
 </body>
